src/app/style.css
@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
body {
    background-color: #141313;
    color: #F1E9DB;
    font-family: "Work Sans";
    font-size: 0.8em;
}

.content {
    display: flex;
    margin: auto;
}

.timeColumn {
    text-wrap: nowrap;
    width: fit-content;
    margin: 0;
}

.classColumn {
    width: 100vw;
}

.columnHeader {
    text-align: center;
    height: 5vh;
    font-size: 1.2em;
}

.columnContent {
    position: relative;
}

.classBlock {
    position: absolute;
    left: 0;
    right: 0;
    width: 95%;
    background-color: #4062BB;
    box-sizing: border-box;
    margin: 0 auto 0 auto;
    padding: 6px;
    border-radius: 10px;
    font-size: 1.1em;
}

.timeBlock {
    background-color: #231F20;
    border: 2px solid #292626;
    box-sizing: border-box;
    margin: 0;
    padding: 6px;
    text-align: right;
    align-content: center;
}

.classBlock p, .timeBlock p {
    margin: 0;
    padding: 0;
}

.classBlock p {
    margin-bottom: 4px;
}

.leftSide {
    float: left;
}

.rightSide {
    float: right;
    text-align: right;
}


.controls {
    display: flex;
    justify-content: center;
    margin: auto;
}

.dateSwitch {
    background-color: #231F20;
    color: #F1E9DB;
    border: 2px solid #292626;
    font-size: 2em;
    width: 60vw;
    height: 5vh;
    margin: 1vh 1vw 0 1vw;
    border-radius: 10px;
}

.dateSwitch:active {
    background-color: #292626;
    border-color: #231F20;
}

